remove unused literature

--- a/literature.bib
+++ b/literature.bib
@@ -11,16 +11,6 @@
   url       = {https://www.uni-due.de/imperia/md/content/swe/papers/2010a-comparison-of-security-requirements-engineering-methods.pdf},
 }
 
-@InProceedings{4384163,
-  author    = {Glinz, Martin},
-  booktitle = {15th IEEE International Requirements Engineering Conference (RE 2007)},
-  title     = {On Non-Functional Requirements},
-  year      = {2007},
-  pages     = {21-26},
-  doi       = {10.1109/RE.2007.45},
-  groups    = {Requirements},
-}
-
 @Misc{Hale2022,
   author       = {Britta Hale and Chelsea Komlo},
   howpublished = {Cryptology ePrint Archive, Paper 2022/449},
@@ -34,18 +24,6 @@ Curial:
 2. Use authenticated encryption},
   eprint       = {https://eprint.iacr.org/2022/449},
   groups       = {Requirements, Adversary Models},
-}
-
-@Article{dolev1983security,
-  author    = {Dolev, Danny and Yao, Andrew},
-  journal   = {IEEE Transactions on information theory},
-  title     = {On the security of public key protocols},
-  year      = {1983},
-  number    = {2},
-  pages     = {198--208},
-  volume    = {29},
-  groups    = {Requirements, Adversary Models},
-  publisher = {IEEE},
 }
 
 @Article{Mylopoulos1992,
@@ -70,26 +48,6 @@ Curial:
 Key finding: Revealing Metadata to attackers might compromise privacy (e.g. sharing relation)},
   doi     = {10.1109/IEEE.EDGE.2017.47},
   groups  = {Requirements, Adversary Models},
-}
-
-@Article{DO2019156,
-  author   = {Quang Do and Ben Martini and Kim-Kwang Raymond Choo},
-  journal  = {Computers & Security},
-  title    = {The role of the adversary model in applied security research},
-  year     = {2019},
-  issn     = {0167-4048},
-  pages    = {156-181},
-  volume   = {81},
-  abstract = {Adversary models have been integral to the design of provably-secure cryptographic schemes or protocols. However, their use in other computer science research disciplines is relatively limited, particularly in the case of applied security research (e.g., mobile app and vulnerability studies). In this study, we conduct a survey of prominent adversary models used in the seminal field of cryptography, and more recent mobile and Internet of Things (IoT) research. Motivated by the findings from the cryptography survey, we propose a classification scheme for common app-based adversaries used in mobile security research, and classify key papers using the proposed scheme. Finally, we discuss recent work involving adversary models in the contemporary research field of IoT. We contribute recommendations to aid researchers working in applied (IoT) security based upon our findings from the mobile and cryptography literature. The key recommendation is for authors to clearly define adversary goals, assumptions and capabilities.},
-  comment  = {- Infos about how to define an attacker model
-
-- Dolev-Yao as one of the mostly used attacker models
-- Might be to strong for many scenarios
-- Adversary Model: Assumptions, Goals and Constraints (+ examples)},
-  doi      = {https://doi.org/10.1016/j.cose.2018.12.002},
-  groups   = {Adversary Models},
-  keywords = {Adversary Model, Applied security, IoT Security, Forensic Adversary Model, Mobile Security},
-  url      = {https://www.sciencedirect.com/science/article/pii/S0167404818306369},
 }
 
 @Article{Nieles2017,
@@ -176,21 +134,6 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   groups       = {Requirements},
 }
 
-@Article{Akinbi2021,
-  author   = {Alex Akinbi and Ehizojie Ojie},
-  journal  = {Forensic Science International: Digital Investigation},
-  title    = {Forensic analysis of open-source XMPP multi-client social networking apps on iOS devices},
-  year     = {2021},
-  issn     = {2666-2817},
-  pages    = {301122},
-  volume   = {36},
-  abstract = {In this paper, we present forensic analysis of Monal and Siskin IM, two decentralized open-source XMPP multi-client social networking apps on iOS devices that provide anonymity and privacy using OMEMO end-to-end encryption. We identified databases maintained by each app and storage locations within the iOS file system that stores the local copies of user information and metadata. We analyzed the databases and storage locations for evidential data of forensic value. The results in this paper show a detailed analysis and correlation of data stored in each app's database to identify the local user's multiple IM accounts and contact list, contents of messages exchanged with contacts, and chronology of conversations. The focus and main contributions of this study include a detailed description of artifacts of forensic interest that can be used to aid mobile forensic investigations.},
-  doi      = {https://doi.org/10.1016/j.fsidi.2021.301122},
-  groups   = {Requirements},
-  keywords = {Mobile forensics, iOS forensics, Monal, Siskin IM, Instant messaging, XMPP, OMEMO, Social networking},
-  url      = {https://www.sciencedirect.com/science/article/pii/S2666281721000196},
-}
-
 @Article{Isobe2021,
   author  = {Isobe, Takanori and Ito, Ryoma},
   journal = {IEEE Access},
@@ -218,17 +161,6 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   location  = {San Antonio, Texas, USA},
   numpages  = {10},
   url       = {https://doi.org/10.1145/2133601.2133633},
-}
-
-@Article{Hoerandner2020,
-  author    = {H{\"o}randner, Felix and Ramacher, Sebastian and Roth, Simon},
-  journal   = {Journal of Banking and Financial Technology},
-  title     = {Selective end-to-end data-sharing in the cloud},
-  year      = {2020},
-  number    = {1},
-  pages     = {139--157},
-  volume    = {4},
-  publisher = {Springer},
 }
 
 @InProceedings{Davis2001,
@@ -421,21 +353,6 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url     = {https://github.com/zoom/zoom-e2e-whitepaper},
 }
 
-@InProceedings{Dixit2018,
-  author    = {Dixit, Pooja and Gupta, Avadhesh Kumar and Trivedi, Munesh Chandra and Yadav, Virendra Kumar},
-  booktitle = {Networking Communication and Data Knowledge Engineering},
-  title     = {Traditional and Hybrid Encryption Techniques: A Survey},
-  year      = {2018},
-  address   = {Singapore},
-  editor    = {Perez, Gregorio Martinez and Mishra, Krishn K. and Tiwari, Shailesh and Trivedi, Munesh C.},
-  pages     = {239--248},
-  publisher = {Springer Singapore},
-  abstract  = {Information security is the process that protects its availability, privacy, and integrity. Access to stored information on computer databases has increased nowadays. Most companies store business and individual information in computer. Much of the information stored is highly confidential and not for knowing publicly. Data encryption is most traditional technique that secure highly confidential information by using some conventional algorithm, which already exist or prewritten. Most powerful part of encryption technique is key generation, which has two parts, one is symmetric key generation and another is asymmetric key generation. Nowadays hackers are easily capable to break the key with the help of modern high computing machines. Current need is strongly encrypted data which cannot be decrypt through cryptanalysis. Paper presented discusses some traditional as well as modern hybrid encryption techniques along with quantum approach such as RSA based on ECC with AVK, DES-RSA, RSA-based singular cubic curve, JCE, 3D chaotic map technique, Blowfish.},
-  groups    = {Requirements},
-  isbn      = {978-981-10-4600-1},
-  url       = {https://link.springer.com/content/pdf/10.1007/978-981-10-4600-1.pdf},
-}
-
 @Misc{Barnes2014,
   author       = {Richard Barnes},
   howpublished = {RFC 7165},
@@ -528,15 +445,6 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title  = {Daten--Innovation--Privatheit--Mit Inverser Transparenz das Gestaltungsdilemma der digitalen Arbeitswelt l{\"o}sen},
   year   = {2022},
   eprint = {https://mediatum.ub.tum.de/doc/1660231/document.pdf},
-}
-
-@InProceedings{Waters2004,
-  author    = {Waters, Brent R and Balfanz, Dirk and Durfee, Glenn and Smetters, Diana K},
-  booktitle = {NDSS},
-  title     = {Building an encrypted and searchable audit log.},
-  year      = {2004},
-  pages     = {5--6},
-  volume    = {4},
 }
 
 @TechReport{Rescorla2000,
@@ -682,6 +590,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
+
+@Comment{jabref-meta: fileDirectoryLatex-joy-Air-von-Jonas-2.fritz.box:/Users/joy/Masterarbeit/template-tuini;}
 
 @Comment{jabref-meta: grouping:
 0 AllEntriesGroup:;
