--- a/literature.bib
+++ b/literature.bib
@@ -6,9 +6,9 @@
   number    = {1},
   pages     = {7--40},
   volume    = {15},
+  eprint    = {https://doi.org/10.1007/s00766-009-0092-x},
   groups    = {Requirements},
   publisher = {Springer},
-  url       = {https://www.uni-due.de/imperia/md/content/swe/papers/2010a-comparison-of-security-requirements-engineering-methods.pdf},
 }
 
 @Misc{Hale2022,
@@ -34,7 +34,7 @@ Curial:
   number  = {6},
   pages   = {483-497},
   volume  = {18},
-  doi     = {10.1109/32.142871},
+  eprint  = {https://doi.org/10.1109/32.142871},
   groups  = {Requirements},
 }
 
@@ -46,7 +46,7 @@ Curial:
   pages   = {252-259},
   comment = {Proposes different Adversary Models for E2E ecnryption.
 Key finding: Revealing Metadata to attackers might compromise privacy (e.g. sharing relation)},
-  doi     = {10.1109/IEEE.EDGE.2017.47},
+  eprint  = {https://doi.org/10.1109/IEEE.EDGE.2017.47},
   groups  = {Requirements, Adversary Models},
 }
 
@@ -56,11 +56,10 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title   = {An introduction to information security},
   year    = {2017},
   number  = {12},
-  pages   = {101},
   volume  = {800},
   comment = {NIST defintion of End-to-end encryption},
+  eprint  = {https://doi.org/10.6028/NIST.SP.800-12r1},
   groups  = {Adversary Models},
-  url     = {https://doi.org/10.6028/NIST.SP.800-12r1},
 }
 
 @Misc{Mallory2022,
@@ -70,6 +69,7 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   note         = {Accessed: 2022-08-31},
   title        = {Definition of End-to-end Encryption},
   year         = {2022},
+  eprint       = {https://datatracker.ietf.org/doc/draft-knodel-e2ee-definition/},
   groups       = {Adversary Models},
 }
 
@@ -80,28 +80,26 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   year         = {2016},
   organization = {Springer},
   pages        = {244--254},
+  eprint       = {https://doi.org/10.1007/978-3-319-45982-0_22},
 }
 
 @Book{Eckert2018,
-  author      = {Claudia Eckert},
-  publisher   = {De Gruyter Oldenbourg},
-  title       = {IT-Sicherheit},
-  year        = {2018},
-  address     = {Berlin, Boston},
-  isbn        = {9783110563900},
-  doi         = {doi:10.1515/9783110563900},
-  groups      = {Adversary Models},
-  lastchecked = {2022-09-05},
-  url         = {https://doi.org/10.1515/9783110563900},
+  author    = {Claudia Eckert},
+  publisher = {De Gruyter Oldenbourg},
+  title     = {IT-Sicherheit},
+  year      = {2018},
+  isbn      = {9783110563900},
+  eprint    = {https://doi.org/10.1515/9783110563900},
+  groups    = {Adversary Models},
 }
 
 @Misc{WebCryptoApi2017,
   author       = {Watson, Mark},
   howpublished = {\url{https://www.w3.org/TR/WebCryptoAPI/}},
-  month        = jan,
   note         = {Accessed: 2022-09-05},
   title        = {Web Cryptography API},
   year         = {2017},
+  eprint       = {https://www.w3.org/TR/WebCryptoAPI/},
   groups       = {Requirements},
 }
 
@@ -115,22 +113,20 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   publisher = {Association for Computing Machinery},
   series    = {WWW '14 Companion},
   abstract  = {The W3C Web Cryptography API is the standard API for accessing cryptographic primitives in Javascript-based environments. We describe the motivations behind the creation of the W3C Web Cryptography API and give a high-level overview with motivating use-cases while addressing objections.},
-  doi       = {10.1145/2567948.2579224},
+  eprint    = {https://doi.org/10.1145/2567948.2579224},
   groups    = {Requirements},
   isbn      = {9781450327459},
-  keywords  = {javascript, cryptography, web, W3C, API, standards},
   location  = {Seoul, Korea},
   numpages  = {6},
-  url       = {https://doi.org/10.1145/2567948.2579224},
 }
 
 @Misc{Levenson2018,
   author       = {Levenson, Hannah},
   howpublished = {\url{https://dzone.com/articles/the-principle-of-least-effort-an-integral-part-of}},
-  month        = sep,
   note         = {Accessed: 2022-09-06},
   title        = {The Principle of Least Effort: An Integral Part of UX},
   year         = {2018},
+  eprint       = {https://dzone.com/articles/the-principle-of-least-effort-an-integral-part-of},
   groups       = {Requirements},
 }
 
@@ -139,9 +135,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   journal = {IEEE Access},
   title   = {Security Analysis of End-to-End Encryption for Zoom Meetings},
   year    = {2021},
-  pages   = {90677-90689},
   volume  = {9},
-  doi     = {10.1109/ACCESS.2021.3091722},
+  eprint  = {https://doi.org/10.1109/ACCESS.2021.3091722},
   groups  = {Requirements},
 }
 
@@ -151,16 +146,13 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title     = {Towards End-to-End Secure Content Storage and Delivery with Public Cloud},
   year      = {2012},
   address   = {New York, NY, USA},
-  pages     = {257–266},
+  pages     = {257–-266},
   publisher = {Association for Computing Machinery},
   series    = {CODASPY '12},
-  abstract  = {Recent years have witnessed the trend of leveraging cloud-based services for large scale content storage, processing, and distribution. Security and privacy are among top concerns for the public cloud environments. Towards end-to-end content security, we propose and implement CloudSeal, a scheme for securely sharing and distributing content via the public cloud. CloudSeal ensures the confidentiality of content in the public cloud environments with flexible access control policies for subscribers and efficient content distribution via content delivery network.CloudSeal seamlessly integrates symmetric encryption, proxy-based re-encryption, k-out-of-n secret sharing, and broadcast revocation mechanisms. These algorithms allow CloudSeal to cache the major part of a stored cipher content object in the delivery network for content distribution, while keeping the minor part in the cloud storage for key management. The separation of subscription-based key management and confidentiality-oriented proxy-based re-encryption policies uniquely enables flexible and scalable deployment of the solution as well as strong security for cached content in the network. We have implemented CloudSeal on Amazon Web Services, including EC2, S3, and CloudFront. Through experimental evaluation, we demonstrate the end-to-end efficiency and scalability of CloudSeal.},
-  doi       = {10.1145/2133601.2133633},
+  eprint    = {https://doi.org/10.1145/2133601.2133633},
   isbn      = {9781450310918},
-  keywords  = {security, cloud computing, cloud storage, confidentiality, content distribution, proxy-based re-encryption},
   location  = {San Antonio, Texas, USA},
   numpages  = {10},
-  url       = {https://doi.org/10.1145/2133601.2133633},
 }
 
 @InProceedings{Davis2001,
@@ -169,8 +161,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title     = {Defective Sign {\& Encrypt in S/MIME, PKCS\#} 7, MOSS, PEM, PGP, and XML.},
   year      = {2001},
   pages     = {65--78},
+  eprint    = {https://theworld.com/~dtd/sign_encrypt/sign_encrypt7.html},
   groups    = {Requirements},
-  url       = {https://theworld.com/~dtd/sign_encrypt/sign_encrypt7.html},
 }
 
 @InProceedings{Seitz2003,
@@ -178,10 +170,9 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   booktitle = {Second IEEE International Security in Storage Workshop},
   title     = {Key Management for Encrypted Data Storage in Distributed Systems},
   year      = {2003},
-  pages     = {20-20},
-  doi       = {10.1109/SISW.2003.10001},
+  pages     = {20--20},
+  eprint    = {https://doi.org/10.1109/SISW.2003.10001},
   groups    = {Requirements},
-  url       = {https://ieeexplore.ieee.org/document/1410756},
 }
 
 @InProceedings{Bethencourt2007,
@@ -190,21 +181,21 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title     = {Ciphertext-{P}olicy {A}ttribute-{B}ased {E}ncryption},
   year      = {2007},
   pages     = {321--334},
+  eprint    = {https://doi.org/10.1109/SP.2007.11},
   groups    = {ABE, Secondary Papers, Solutions},
-  url       = {https://doi.org/10.1109/SP.2007.11},
 }
 
 @InCollection{Sahai2009,
-  author                     = {Sahai, Amit and Waters, Brent and Lu, Steve},
-  booktitle                  = {{IDENTITY-BASED CRYPTOGRAPHY}},
-  publisher                  = {{IOS PRESS}},
-  title                      = {{Attribute-Based Encryption}},
-  year                       = {{2009}},
-  pages                      = {156--168},
-  series                     = {{Cryptology and Information Security Series}},
-  type                       = {{Article; Book Chapter}},
-  volume                     = {{2}},
-  abstract                   = {{As more sensitive data is shared and stored by third-party sites on the
+  author    = {Sahai, Amit and Waters, Brent and Lu, Steve},
+  booktitle = {{IDENTITY-BASED CRYPTOGRAPHY}},
+  publisher = {{IOS PRESS}},
+  title     = {{Attribute-Based Encryption}},
+  year      = {{2009}},
+  pages     = {156--168},
+  series    = {{Cryptology and Information Security Series}},
+  type      = {{Article; Book Chapter}},
+  volume    = {{2}},
+  abstract  = {{As more sensitive data is shared and stored by third-party sites on the
    Internet, there will be a need to encrypt data stored at these sites.
    One drawback of encrypting data is that it can be selectively shared
    only at a coarse-grained level (i.e., giving another party your private
@@ -216,10 +207,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
    information and broadcast encryption. We describe a construction that
    supports delegation of private keys, which subsumes Hierarchical
    Identity-Based Encryption (HIBE).}},
-  groups                     = {ABE, Solutions},
-  number-of-cited-references = {{0}},
-  url                        = {https://doi.org/10.3233/978-1-58603-947-9-156},
-  web-of-science-categories  = {{Computer Science, Theory \& Methods}},
+  eprint    = {https://doi.org/10.3233/978-1-58603-947-9-156},
+  groups    = {ABE, Solutions},
 }
 
 @Article{Vaanchig2018,
@@ -229,8 +218,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   year    = {2018},
   pages   = {95--109},
   volume  = {20},
+  eprint  = {https://doi.org/10.6633/IJNS.201801.20(1).11},
   groups  = {ABE, Solutions},
-  url     = {https://doi.org/10.6633/IJNS.201801.20(1).11},
 }
 
 @InProceedings{fiat1993broadcast,
@@ -240,8 +229,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   year         = {1993},
   organization = {Springer},
   pages        = {480--491},
+  eprint       = {https://doi.org/10.1007/3-540-48329-2_40},
   groups       = {BE, Solutions},
-  url          = {https://doi.org/10.1007/3-540-48329-2_40},
 }
 
 @Article{Sakai2007,
@@ -251,8 +240,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   year    = {2007},
   pages   = {217},
   volume  = {2007},
+  eprint  = {https://ia.cr/2007/217},
   groups  = {Solutions},
-  url     = {https://ia.cr/2007/217},
 }
 
 @InProceedings{shamir1985,
@@ -263,8 +252,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   pages     = {47--53},
   publisher = {Springer Berlin Heidelberg},
   abstract  = {In this paper we introduce a novel type of cryptographic scheme, which enables any pair of users to communicate securely and to verify each other's signatures without exchanging private or public keys, without keeping key directories, and without using the services of a third party. The scheme assumes the existence of trusted key generation centers, whose sole purpose is to give each user a personalized smart card when he first joins the network. The information embedded in this card enables the user to sign and encrypt the messages he sends and to decrypt and verify the messages he receives in a totally independent way, regardless of the identity of the other party. Previously issued cards do not have to be updated when new users join the network, and the various centers do not have to coordinate their activities or even to keep a user list. The centers can be closed after all the cards are issued, and the network can continue to function in a completely decentralized way for an indefinite period.},
+  eprint    = {https://doi.org/10.1007/3-540-39568-7_5},
   groups    = {Secondary Papers, IBBE (Identity based broadcast encryption), Solutions},
-  url       = {https://doi.org/10.1007/3-540-39568-7_5},
 }
 
 @InProceedings{Gentry2003,
@@ -275,8 +264,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   pages     = {272--293},
   publisher = {Springer Berlin Heidelberg},
   abstract  = {We introduce the notion of certificate-based encryption. In this model, a certificate --- or, more generally, a signature --- acts not only as a certificate but also as a decryption key. To decrypt a message, a keyholder needs both its secret key and an up-to-date certificate from its CA (or a signature from an authorizer). Certificate-based encryption combines the best aspects of identity-based encryption (implicit certification) and public key encryption (no escrow). We demonstrate how certificate-based encryption can be used to construct an efficient PKI requiring less infrastructure than previous proposals, including Micali's Novomodo, Naor-Nissim and Aiello-Lodha-Ostrovsky.},
+  eprint    = {https://doi.org/10.1007/3-540-39200-9_17},
   groups    = {Secondary Papers, Solutions},
-  url       = {https://doi.org/10.1007/3-540-39200-9_17},
 }
 
 @Article{Li2018,
@@ -285,11 +274,10 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title    = {Anonymous certificate-based broadcast encryption with constant decryption cost},
   year     = {2018},
   pages    = {110--127},
-  abstract = {Most of the existing broadcast encryption schemes are constructed in either public key cryptosystem or identity-based cryptosystem. However, the overload of certificate management is heavy for public key cryptosystem while the key escrow problem is inherent in identity-based cryptosystem. Certificate-based cryptosystem provides a promising solution of designing more efficient and secure broadcast encryption schemes. Meanwhile, it is an important security property to protect the privacy of receivers, anonymity in many broadcast encryption application scenarios. Furthermore, in the broadcast encryption applications with a large number of computationally constrained users, it is critical to lower the computation cost, especially the decryption cost of the users. In this paper, we first introduce the notion of anonymous certificate-based broadcast encryption. Specifically, we formalize the definition and security model for anonymous certificate-based broadcast encryption. Then we construct an anonymous certificate-based broadcast encryption scheme with constant decryption cost. Compared with the existing anonymous multi-receiver certificate-based encryption scheme, the proposed scheme has advantage in the computation efficiency. Therefore, our scheme is more feasible for those broadcast encryption application scenarios where there are many receivers with limited computation ability. In the respect of security, the proposed scheme achieves anonymity and confidentiality against adaptive chosen-ciphertext attacks simultaneously under standard assumption.},
+  eprint   = {https://doi.org/10.1016/j.ins.2018.04.067},
   file     = {:JabRef/Li2018.pdf:PDF},
   groups   = {CBBE (Certificate-based broadcast-encryption), Papers, Solutions},
   keywords = {Broadcast encryption, Certificate-based broadcast encryption, Anonymity, Adaptive security, Chosen-ciphertext attack},
-  url      = {https://doi.org/10.1016/j.ins.2018.04.067},
 }
 
 @InProceedings{Fan2013,
@@ -298,8 +286,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title     = {Anonymous {M}ulti-receiver {C}ertificate-{B}ased {E}ncryption},
   year      = {2013},
   pages     = {19--26},
+  eprint    = {https://doi.org/10.1109/CyberC.2013.13},
   groups    = {CBBE (Certificate-based broadcast-encryption), Solutions},
-  url       = {https://doi.org/10.1109/CyberC.2013.13},
 }
 
 @InProceedings{Chen2018,
@@ -308,8 +296,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title     = {Efficient {K}ey-{A}ggregate {P}roxy {R}e-{E}ncryption for {S}ecure {D}ata {S}haring in {C}louds},
   year      = {2018},
   pages     = {1--4},
+  eprint    = {https://doi.org/10.1109/DESEC.2018.8625149},
   groups    = {Secondary Papers, PRE, Solutions},
-  url       = {https://doi.org/10.1109/DESEC.2018.8625149},
 }
 
 @Article{Marlinspike2016,
@@ -318,17 +306,16 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title   = {The {X3DH} key agreement protocol},
   year    = {2016},
   volume  = {283},
+  eprint  = {https://signal.org/docs/specifications/x3dh/x3dh.pdf},
   groups  = {Solutions},
-  url     = {https://signal.org/docs/specifications/x3dh/x3dh.pdf},
 }
 
 @Article{Perrin2016,
-  author  = {Perrin, Trevor and Marlinspike, Moxie},
-  journal = {GitHub wiki},
-  title   = {The double ratchet algorithm},
-  year    = {2016},
-  groups  = {Solutions},
-  url     = {https://signal.org/docs/specifications/doubleratchet/doubleratchet.pdf},
+  author = {Perrin, Trevor and Marlinspike, Moxie},
+  title  = {The Double Ratchet Algorithm},
+  year   = {2016},
+  eprint = {https://signal.org/docs/specifications/doubleratchet/doubleratchet.pdf},
+  groups = {Solutions},
 }
 
  
@@ -337,20 +324,20 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   month   = {May},
   title   = {Private Group Messaging},
   year    = {2014},
+  eprint  = {https://signal.org/blog/private-groups/},
   groups  = {Solutions},
   journal = {Signal},
-  url     = {https://signal.org/blog/private-groups/},
 }
 
 @Article{Blum2020,
   author  = {Blum, Josh and Booth, Simon and Gal, Oded and Krohn, Maxwell and Len, J and Lyons, K and Marcedone, A and Maxim, M and Mou, ME and O’Connor, J and others},
   journal = {Zoom Video Commun., Inc., San Jose, CA, Tech. Rep. Version},
-  title   = {E2E encryption for zoom meetings},
+  title   = {Zoom Cryptography Whitepaper},
   year    = {2020},
   number  = {1},
   volume  = {2},
+  eprint  = {https://github.com/zoom/zoom-e2e-whitepaper},
   groups  = {Solutions},
-  url     = {https://github.com/zoom/zoom-e2e-whitepaper},
 }
 
 @Misc{Barnes2014,
@@ -378,8 +365,8 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   author = {Barker, Elaine and Chen, Lily and Keller, Sharon and Roginsky, Allen and Vassilev, Apostol and Davis, Richard},
   title  = {Recommendation for pair-wise key-establishment schemes using discrete logarithm cryptography},
   year   = {2017},
+  eprint = {https://doi.org/10.6028/NIST.SP.800-56Ar3},
   school = {National Institute of Standards and Technology},
-  url    = {https://csrc.nist.gov/CSRC/media/Publications/sp/800-56a/rev-3/draft/documents/sp800-56ar3-draft.pdf},
 }
 
 @TechReport{JWT2015,
@@ -395,14 +382,15 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title  = {Literature research: A cryptographic protocol to maintain confidentiality when storing multi-owner data},
   year   = {2022},
   type   = {Studienarbeit},
+  eprint = {https://mediatum.ub.tum.de/1692382},
 }
 
 @Article{Zieglmeier2021,
   author  = {Zieglmeier, Valentin and Pretschner, Alexander},
-  journal = {arXiv preprint arXiv:2103.10769},
+  journal = {arXiv:2103.10769},
   title   = {Trustworthy transparency by design},
   year    = {2021},
-  url     = {https://arxiv.org/pdf/2103.10769.pdf},
+  eprint  = {https://doi.org/10.48550/arXiv.2103.10769},
 }
 
 @Book{Katz2020,
@@ -410,6 +398,7 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   publisher = {CRC press},
   title     = {Introduction to modern cryptography},
   year      = {2020},
+  eprint    = {https://doi.org/10.1201/b17668},
 }
 
 @Article{Nielson1993,
@@ -427,7 +416,7 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title     = {Investigating Managed Language Runtime Performance: Why $\{$JavaScript$\}$ and Python are 8x and 29x slower than C++, yet Java and Go can be Faster?},
   year      = {2022},
   pages     = {835--852},
-  eprint    = {https://www.usenix.org/conference/atc22/presentation/lion},
+  eprint    = {https://www.usenix.org/system/files/atc22-lion.pdf},
 }
 
 @InCollection{Schallmo2016,
@@ -444,7 +433,7 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   author = {Boes, Andreas and Hess, Thomas and Pretschner, Alexander and K{\"a}mpf, Tobias and Vogl, Elisabeth},
   title  = {Daten--Innovation--Privatheit--Mit Inverser Transparenz das Gestaltungsdilemma der digitalen Arbeitswelt l{\"o}sen},
   year   = {2022},
-  eprint = {https://mediatum.ub.tum.de/doc/1660231/document.pdf},
+  eprint = {https://mediatum.ub.tum.de/doc/1660231},
 }
 
 @TechReport{Rescorla2000,
@@ -482,7 +471,7 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   pages    = {5536-5541},
   volume   = {113},
   abstract = {Since 2013, a stream of disclosures has prompted reconsideration of surveillance law and policy. One of the most controversial principles, both in the United States and abroad, is that communications metadata receives substantially less protection than communications content. Several nations currently collect telephone metadata in bulk, including on their own citizens. In this paper, we attempt to shed light on the privacy properties of telephone metadata. Using a crowdsourcing methodology, we demonstrate that telephone metadata is densely interconnected, can trivially be reidentified, and can be used to draw sensitive inferences.},
-  eprint   = {https://www.pnas.org/doi/pdf/10.1073/pnas.1508081113},
+  eprint   = {https://doi.org/10.1073/pnas.1508081113},
 }
 
 @TechReport{JWE2015,
@@ -528,7 +517,7 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   year      = {2007},
   pages     = {1--16},
   volume    = {2007},
-  eprint    = {https://jes-eurasipjournals.springeropen.com/articles/10.1155/2007/74706},
+  eprint    = {https://doi.org/10.1155/2007/74706},
   publisher = {Springer},
 }
 
@@ -539,7 +528,7 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   year         = {2002},
   organization = {Springer},
   pages        = {83--107},
-  eprint       = {https://link.springer.com/chapter/10.1007/3-540-46035-7_6},
+  eprint       = {https://doi.org/10.1007/3-540-46035-7_6},
 }
 
 @InProceedings{Braz2007,
@@ -586,7 +575,7 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   publisher = {National Institute of Standards and Technology, Technology Administration~…},
   title     = {Recommendation for key management: Part 1: General},
   year      = {2006},
-  eprint    = {https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-57pt1r5.pdf},
+  eprint    = {https://doi.org/10.6028/NIST.SP.800-57pt1r5},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
